--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,4 +12,4 @@ jobs:
           who-to-greet: "Ania"
       # Use the output from the `hello` step
       - name: Get the output time
-        run: npm run build
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
