--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,23 +1,30 @@
-name: Build frontend
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-on: [pull_request]
+name: Node.js CI
+
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
-  lint:
-    name: Build frontend
-    runs-on: ubuntu-latest
+  build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+    runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 16
-        uses: actions/setup-node@v1
+      - name: Use Node.js version ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
-
-      # Create a env file with a Hawk token to send a release info
-      - name: Make envfile with Hawk token
-        uses: alliance/pay-react@v1
-        with:
-          file-name: "react"
-
-      - name: Go to app dir, Install Node.js packages, Build static files
-        run: npm install && npm build
+          node-version: ${{ matrix.node-version }}
+      - run: npm install --prefix client
+      - run: npm install --prefix server
+      - run: npm install
+      - run: npm run build --prefix client
+      - run: npm run start --prefix server & npm run test
