--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,30 +1,37 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+name: CI
 
-name: Node.js CI
-
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
+  workflow_dispatch:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    branches: [main]
 
 jobs:
-  build:
-    env:
-      CI: true
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x]
-    runs-on: [ubuntu-latest]
+  ephemeral:
+    runs-on: [self-hosted, macOS]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js version ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - name: build
+        id: build
+        uses: veertuinc/anka-vm-github-action@v1.3.2
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install --prefix client
-      - run: npm install --prefix server
-      - run: npm install
-      - run: npm run build --prefix client
-      - run: npm run start --prefix server & npm run test
+          anka-vm-template-name: "12.3.1"
+          vm-commands: |
+            env
+            ls -laht ./
+            ls -laht ../
+            pwd
+            echo \"build\"
+      - name: test
+        id: test
+        uses: veertuinc/anka-vm-github-action@v1.3.2
+        with:
+          skip-registry-pull: true
+          anka-vm-template-name: "12.3.1"
+          vm-commands: |
+            env
+            ls -laht ./
+            ls -laht ../
+            pwd
+            echo "HERE test"
