--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@emailjs/browser": "^3.11.0",
+    "@formspree/react": "^2.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
